Bug 282205 - Human Readable Error Messages
Summary: Human Readable Error Messages
Status: RESOLVED FIXED
Alias: None
Product: telepathy
Classification: Unmaintained
Component: kded-module (other bugs)
Version First Reported In: unspecified
Platform: Unlisted Binaries Linux
: NOR normal
Target Milestone: 0.4.0
Assignee: Telepathy Bugs
URL:
Keywords:
: 276613 (view as bug list)
Depends on:
Blocks: 282193
  Show dependency treegraph
 
Reported: 2011-09-17 10:58 UTC by George Goldberg
Modified: 2012-07-06 12:47 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description George Goldberg 2011-09-17 10:58:41 UTC
No more org.freedesktop.Telepathy.foo errors in the UI

Assigned to D-Ed for 0.2
Comment 1 Martin Klapetek 2011-10-14 17:25:42 UTC
*** Bug 276613 has been marked as a duplicate of this bug. ***
Comment 2 Martin Klapetek 2011-10-24 14:10:53 UTC
Git commit e69018f074a22b273279a6b81554c5d5bf82cb03 by Martin Klapetek.
Committed on 24/10/2011 at 14:18.
Pushed by mklapetek into branch 'master'.

Error dictionary for displaying human readable error strings

Reviewed-by:
REVIEW:
BUG: 282205

M  +1    -0    CMakeLists.txt
A  +156  -0    error-dictionary.cpp     [License: LGPL (v2.1+)]
A  +44   -0    error-dictionary.h     [License: LGPL (v2.1+)]
M  +3    -1    error-handler.cpp

http://commits.kde.org/telepathy-kded-module/e69018f074a22b273279a6b81554c5d5bf82cb03