Error dictionary for displaying human readable error strings

Reviewed-by:
REVIEW:
BUG: 282205