error-handler.cpp
@@ -23,6 +23,8 @@
 #include <KNotification>
 #include <KAboutData>
 
+#include "error-dictionary.h"
+
 ErrorHandler::ErrorHandler(const Tp::AccountManagerPtr& am, QObject* parent)
     : QObject(parent)
 {
@@ -63,7 +65,7 @@ void ErrorHandler::handleErrors(const Tp::ConnectionStatus status)
                 showMessageToUser(i18n("Could not connect %1. There was a network error, check your connection", account->displayName()), ErrorHandler::SystemMessageError);
                 break;
             default:
-                showMessageToUser(i18n("An unexpected error has occurred with %1: '%2'", account->displayName(), account->connectionError()), ErrorHandler::SystemMessageError);
+                showMessageToUser(ErrorDictionary::instance()->displayErrorMessage(connectionError), ErrorHandler::SystemMessageError);
                 break;
         }
     }
